k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: szulinek
  namespace: szulinek
spec:
  ingressClassName: nginx

  rules:
    - host: szulinek.pl
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3001

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
